# datecs

./: .gitignore  build.gradle  gradle.properties  settings.gradle
blksdk/: build.gradle  proguard-rules.pro
blksdk/libs/jniLibs/openssl/: CHANGES
blksdk/libs/jniLibs/openssl/armeabi-v7a/include/openssl/: obj_mac.h  ocsp.h
blksdk/src/main/: AndroidManifest.xml
blksdk/src/main/cpp/: CMakeLists.txt  sdklib.cpp
blksdk/src/main/cpp/iso8583/: dl_base.h  dl_iso8583.c  dl_iso8583.h  dl_iso8583_common.c  dl_iso8583_common.h  dl_iso8583_defs_1993.c  dl_iso8583_fields.c  dl_output.c  dl_output.h  dl_str.c  dl_str.h  dl_time.c
blksdk/src/main/java/com/blk/sdk/: CardReader.java  Convert.java  DT.java  DeviceInfo.java  Iso8583.java  MainPrinter.java  Openssl.java  Rtc.java  Security.java  TickTimer.java  Timer.java  Tlv.java  UI.java  Utility.java  c.java  file.java  string.java
blksdk/src/main/res/drawable/: custom_button_text_color.xml
blksdk/src/main/res/layout/: activity_ip.xml  activity_main3.xml  activity_offline_pin.xml  activity_screen_saver.xml  activity_swipe_card.xml  fragment_content.xml  fragment_lbasedialog.xml  fragment_page_pinpad_ex.xml  grid_items_border.xml  grid_single.xml  layout_menu_item_click_event.xml  list_single.xml
blksdk/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
blksdk/src/main/res/values-night/: styles.xml
fatura_vizyon/: build.gradle
fatura_vizyon/doc/: Faturavizyon.postman_collection.json  vizyon fatura selek.txt
fatura_vizyon/src/main/: AndroidManifest.xml
fatura_vizyon/src/main/java/com/blk/fatura_vizyon/: FaturaVizyon.java  HttpHost.java  MainActivity.java  Menu.java
fatura_vizyon/src/main/res/layout/: activity_main.xml
fatura_vizyon/src/main/res/values/: strings.xml  themes.xml
fatura_vizyon/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
platform/: build.gradle  proguard-rules.pro
platform/src/androidTest/java/com/blk/platform/: ExampleInstrumentedTest.java
platform/src/main/: AndroidManifest.xml
platform/src/main/java/com/blk/platform/: ByteArray.java  ICard.java  IEmvcl.java  IIcc.java  IMifare.java  IPlatform.java  IPrinter.java  ISystem.java  Printer.java  System.java
platform/src/test/java/com/blk/platform/: ExampleUnitTest.java
platform_castle/: README.md  build.gradle  proguard-rules.pro
platform_castle/src/main/: AndroidManifest.xml
platform_castle/src/main/cpp/: CMakeLists.txt  ctos_api.cpp  ctosapi.h  ctoserr.h  emvaplib.h  typedef.h
platform_castle/src/main/java/com/blk/platform_castle/: CTOS_API.java  CardCtos.java  IccCtos.java  MifareCtos.java  PlatfromCtos.java  PrinterCtos.java  SystemCtos.java  TLVUtility.java
techpos/: build.gradle  google-services.json  local.properties
techpos/release/: output.json
techpos/sampledata/: VBIN  VCAK  VCOMM  VEMVCLSPP3  VEMVCLSPW2  VEMVCON  VEOD  VSpecialBIN  VTERM  bkm_emv_contact.xml  bkm_emv_contactless.xml  techpos.db
techpos/src/main/: AndroidManifest.xml
techpos/src/main/assets/: cup8583_V20180105.xml
techpos/src/main/java/com/blk/techpos/: AppTechpos.java  Apps.java  Comms.java  Keys.java  MyReceiver.java  (+4 more)
techpos/src/main/res/layout/: activity_alert.xml  activity_main.xml  custom_dialog.xml
techpos/src/main/res/raw/: star_odealappcom.crt
techpos/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+100 files in other folders)
